try to fix gmap on iphone

--- a/pageStyles/index.module.scss
+++ b/pageStyles/index.module.scss
@@ -594,7 +594,7 @@
       align-items: center;
       margin-left: 0px;
       margin-right: 0px;
-      height: 100%;
+      // height: 100%;
     }
 
     .addressBlock {
@@ -649,7 +649,7 @@
     @media (max-width: 1024px) {
       // margin: 30px 10px;
       width: 100%;
-      height: 100%;
+      // height: 100%;
       padding: 5px 20px;
       justify-content: initial;
     }
